--- a/app/src/main/res/layout/activity_settings_video.xml
+++ b/app/src/main/res/layout/activity_settings_video.xml
@@ -7,6 +7,7 @@
 			android:padding="@dimen/settings_padding"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
+
 		<TableRow android:layout_width="match_parent" android:layout_height="match_parent">
 			<TextView
 					android:layout_width="wrap_content"
@@ -100,6 +101,69 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:id="@+id/checkboxRemoteControl" android:layout_span="2"/>
+		</TableRow>
+		<TableRow
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
+
+			<CheckBox
+				android:id="@+id/checkboxSmbUpload"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="Upload to Smb Server"/>
+		</TableRow>
+		<TableRow>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="0"
+				android:labelFor="@+id/editTextServer"
+				android:text="Server and Folder"/>
+
+			<EditText
+				android:id="@+id/editTextServer"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="2.0"
+				android:hint="//192.168.1.1/myShare"
+				android:inputType="text"
+				android:maxLines="1"/>
+
+		</TableRow>
+		<TableRow>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="0"
+				android:labelFor="@+id/editTextUsername"
+				android:text="Username"/>
+			<EditText
+				android:id="@+id/editTextUsername"
+				android:inputType="text"
+				android:maxLines="1"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="2.0" />
+
+		</TableRow>
+		<TableRow>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="0"
+				android:labelFor="@+id/editTextPassword"
+				android:text="Password"/>
+			<EditText
+				android:id="@+id/editTextPassword"
+				android:inputType="textPassword"
+				android:maxLines="1"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="2.0" />
+
 		</TableRow>
 	</TableLayout>
 </ScrollView>
